--- a/Litters.html
+++ b/Litters.html
@@ -32,7 +32,7 @@
 <!-- NavBar Section -->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand" href="#">WeiBer schneeberg</a>
+<a class="navbar-brand" href="#">WeiBer Schneeberg</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
 </button>
