--- a/ContactUS.html
+++ b/ContactUS.html
@@ -64,8 +64,9 @@
 </div>
 
 <!-- Contact us form -->
-
-<div class="contact">
+<div class="row">
+  
+<div class="col-lg-6 contact">
  
 <div class="row">
   
@@ -101,9 +102,9 @@
     </div>
   </div>
 
-  <div class="contact-btn col-lg-2 col-md-6 col-sm-12">
+  <div class=" contact-btn col-lg-2 col-md-6 col-sm-12">
 
-    <button type="button" class="btn btn-dark btn-lg ">Submit</button>
+    <button type="button" class=" btn btn-dark btn-lg ">Submit</button>
 
    </div>
   
@@ -112,7 +113,8 @@
 
 
 </div> <br>
-<div class="contact-info">
+<div class="col-lg-6 contact-info ">
+ <a href="https://wa.me/919503083758" ><button type="button" class="btn btn-dark btn-lg "><i class="fa fa-whatsapp" aria-hidden="true" style="color: green;"></i>Send Msg on What'sApp</button></a>
   <h4>
     Mr. Vikas Suryavanshi <br>
     Delhi <br>
@@ -120,6 +122,7 @@
   </h4>
 </div>
 
+</div>
 
 
 <!-- Footer Section  -->
