--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!-- top section -->
        <div class="Top-section">
-        <img class="Top-img" src="img/9dPnPAj.jpg" alt="">
+        <img class="Top-img" src="img/" alt="Banner image">
 <!-- NavBar Section -->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -71,7 +71,7 @@
         <div class="row">
 
           <div class="grid-img col-lg-3 col-md-4">
-            <img  src="img/maxresdefault.jpg" alt="" width="300" height="200">
+            <img  src="img/Tyson/" alt="" width="300" height="200">
           </div>
           
           <div class="grid-img col-lg-3 col-md-4">
