--- a/ContactUS.html
+++ b/ContactUS.html
@@ -114,7 +114,7 @@
 
 </div> <br>
 <div class="col-lg-6 contact-info ">
- <a href="https://wa.me/919212999995" ><button type="button" class="btn btn-dark btn-lg "><i class="fa fa-whatsapp" aria-hidden="true" style="color: green;"></i>Send Msg on What'sApp</button></a>
+ <a href="https://wa.me/919212999995" ><button type="button" class="btn btn-dark btn-lg "><i class="fa fa-whatsapp "  aria-hidden="true" style="color: green; size: 5x;"></i>Send Msg on What'sApp</button></a>
   <h4>
     Mr. Vikas Suryavanshi <br>
     Delhi <br>
@@ -129,9 +129,9 @@
 
     <footer id="footer">
       <a href="https://www.facebook.com/vikas.suryavanshi.505"><i class="fab fa-facebook-f social-icon"></i></a>
-      <i class="fab fa-twitter-square social-icon"></i>
+      
      <a href="https://www.instagram.com/ausdershwetkang/?igshid=1p8xst002ht8z"> <i class="fab fa-instagram social-icon"></i></a>
-      <i class="fas fa-envelope social-icon"></i>
+     
       <br>
   
       <a href=""><p>© Copyright 2020 </p></a>
