--- a/Gallary.html
+++ b/Gallary.html
@@ -68,12 +68,12 @@
 
 
     <div class="gallary-vdo col-lg-6">
-      <iframe src="https://www.youtube.com/embed/9nFKu1RxUgM" frameborder="0" width="550" height="400" ></iframe>
+      <iframe src="https://www.youtube.com/embed/9nFKu1RxUgM" frameborder="0" ></iframe>
     </div>
     
  
     <div class="gallary-vdo col-lg-6">
-      <iframe src="https://www.youtube.com/embed/RuaVkIJMQGo" frameborder="0" width="550" height="400"></iframe>
+      <iframe src="https://www.youtube.com/embed/RuaVkIJMQGo" frameborder="0" ></iframe>
     </div>
     
    
