--- a/Male.html
+++ b/Male.html
@@ -23,7 +23,7 @@
     <body>
      
 
-        <!-- top section -->
+<!-- top section -->
    <div class="Top-section">
     <img class="Top-img" src="img/9dPnPAj.jpg" alt="">
 <!-- NavBar Section -->
@@ -36,7 +36,7 @@
 <div class="collapse navbar-collapse" id="navbarNav">
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="Male.html">Male</a>
@@ -45,10 +45,10 @@
       <a class="nav-link" href="Female.html">Female</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="">Litters</a>
+        <a class="nav-link" href="Litters.html">Litters</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">For Sale</a>
+        <a class="nav-link" href="ForSale.html">For Sale</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="Gallary.html">Gallary</a>
