--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-     <a href="Home.html"><img class="banner-img" src="img/banner.jpg" alt=""></a>
+           
+        <a href="Home.html"><img class="banner-img" src="img/1banner.jpg" alt="banner-img"></a>
         <script src="" async defer></script>
     </body>
 </html>
