--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
            
-        <a href="Home.html"><img class="banner-img" src="img/1banner.jpg" alt="banner-img"></a>
+        <a href="Home.html"><img class="banner-img" src="img/banner.jpg" alt="banner-img"></a>
         <script src="" async defer></script>
     </body>
 </html>
