--- a/Home.html
+++ b/Home.html
@@ -64,7 +64,26 @@
 </div>
 </nav>
 </div>
+  <!-- Introduction of site -->
+
+  <div class="skills">
+    <h2>Our Best Dogs</h2>
+    <div class="row">
+      <div class="skill-row  ">
+        <img class="floatRight" src="img/Tyson/10.jpg" alt="Tyson" width="300" height="200">
+        <h3>JAVA DEVELOPMENT ANGULAR JS </h3>
+        <p> JAVA DEVELOPMENT ANGULAR JS (Java , JavaScript’s , Springs , Hibernate , Bootstrap , React.js , Express.js , Node.js , AWS , SQL , Mongo DB )</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="skill-row " >
+        <img class="floatLeft" src="img/Tasha/2.jpg" alt="Tasha" width="300" height="200" >
+         <h3>Saiitron tech</h3>
+         <p >Software Developer msnlsnldjnadASdasd sa da sd as d asd sdsada sd dasdasdasdasdasd asdasdasdas dasdasd asdasasd asdsadsa dsadsad asdasdsa dasdas dasdas dasdasda </p>
+       </div>
+    </div>
   
+  </div>
 
 <!-- Photos Section -->
     <div class="photo-grid">
