--- a/Home.html
+++ b/Home.html
@@ -71,7 +71,7 @@
     <div class="row">
       <div class="skill-row  ">
         <img class="floatRight" src="img/Tyson/10.jpg" alt="Tyson" width="300" height="200">
-        <h3>JAVA DEVELOPMENT ANGULAR JS </h3>
+        <h4>Indian champion <strong>Tyson</strong> <em>HausOfLazic</em></h4>
         <p> JAVA DEVELOPMENT ANGULAR JS (Java , JavaScript’s , Springs , Hibernate , Bootstrap , React.js , Express.js , Node.js , AWS , SQL , Mongo DB )</p>
       </div>
     </div>
