--- a/Home.html
+++ b/Home.html
@@ -67,20 +67,25 @@
   <!-- Introduction of site -->
 
   <div class="skills">
-    <h2>Our Best Dogs</h2>
+    <h2>Our Dogs</h2>
     <div class="row">
       <div class="skill-row  ">
         <img class="floatRight" src="img/Tyson/10.jpg" alt="Tyson" width="300" height="200">
         <h4>Indian champion <strong>Tyson</strong> <em>HausOfLazic</em></h4>
-        <p> JAVA DEVELOPMENT ANGULAR JS (Java , JavaScript’s , Springs , Hibernate , Bootstrap , React.js , Express.js , Node.js , AWS , SQL , Mongo DB )</p>
+          <h6>Father: AnyDog</h6>
+          <h6>Mother: AnyDog</h6><p></p>
+
+      
       </div>
     </div>
     <div class="row">
       <div class="skill-row " >
-        <img class="floatLeft" src="img/Tasha/2.jpg" alt="Tasha" width="300" height="200" >
-         <h3>Saiitron tech</h3>
-         <p >Software Developer msnlsnldjnadASdasd sa da sd as d asd sdsada sd dasdasdasdasdasd asdasdasdas dasdasd asdasasd asdsadsa dsadsad asdasdsa dasdas dasdas dasdasda </p>
-       </div>
+        <img class="floatLeft" src="img/Bruna/3.jpg" alt="Tasha" width="300" height="200" >
+        <h4>Indian champion <strong>Tasha</strong>  <em>ausdershwetkang</em></h4>
+        <h6>Father: AnyDog</h6>
+          <h6>Mother: AnyDog</h6><p></p>
+s
+        </div>
     </div>
   
   </div>
