--- a/Home.html
+++ b/Home.html
@@ -32,12 +32,12 @@
 <!-- NavBar Section -->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand" href="#">WeiBer Schneeberg</a>
+<a class="navbar-brand" href="Home.html"><strong>WeiBer Schneeberg</strong> </a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarNav">
-<ul class="navbar-nav">
+<ul class="navbar-nav " >
   <li class="nav-item active">
     <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
   </li>
@@ -86,7 +86,7 @@
           <h6>Mother: AnyDog</h6><p></p>
       </div>
     </div>
-    
+
     <div class="row">
       <div class="skill-row  ">
         <img class="floatRight" src="img/Tyson/10.jpg" alt="Tyson" width="300" height="200">
