--- a/ContactUS.html
+++ b/ContactUS.html
@@ -74,7 +74,7 @@
 <div class="row">
   <div class="col-md-6 mb-3">
     <label for="Full Name">Full Name</label>
-    <input type="text" class="form-control"name="name" id="FullName" placeholder="your Name" value="" required="">
+    <input type="text" class="form-control" id="name" placeholder="your Name" value="" required="">
     <div class="invalid-feedback">
       Valid Full Name is required.
     </div>
@@ -82,7 +82,7 @@
  
   <div class="col-md-6 mb-3">
     <label for="email">Email <span class="text-muted">(Optional)</span></label>
-    <input type="email" class="form-control" name="email" id="email" placeholder="you@example.com">
+    <input type="email" class="form-control"  id="email" placeholder="you@example.com">
     <div class="invalid-feedback">
       Please enter a valid email address for shipping updates.
     </div>
@@ -90,7 +90,7 @@
 
   <div class="col-lg-6">
     <label for="Mobile No.">Mobile No.</label>
-    <input type="text" class="form-control" name="mobile" id="MobileNo" placeholder="Mobile Number" required="">
+    <input type="text" class="form-control"  id="MobileNo" placeholder="Mobile Number" required="">
     <div class="invalid-feedback">
       Please enter your Mobile No..
     </div>
@@ -98,7 +98,7 @@
 
   <div class="col-lg-12">
     <label for="address">Address</label>
-    <input type="text" class="form-control" name="adrs" id="address" placeholder="1234 Main St" required="">
+    <input type="text" class="form-control" id="address" placeholder="1234 Main St" required="">
     <div class="invalid-feedback">
       Please enter your address.
     </div>
