--- a/ContactUS.html
+++ b/ContactUS.html
@@ -69,7 +69,7 @@
 <div class="row">
   
 <div class="col-lg-6 contact">
-  <form id="myForm" action="" method="POST" action="contact.php">
+  <form id="myForm" action="" method="POST" action="ContactUS.html">
 
 <div class="row">
   <div class="col-md-6 mb-3">
