--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css">
+        <script data-ad-client="ca-pub-8032116154736971" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body>
         <a href="Home.html"><img class="banner-img" src="img/Tasha/2.jpg" alt="banner-img"></a>
