--- a/Female.html
+++ b/Female.html
@@ -101,7 +101,7 @@
          <!-- Footer Section  -->
 
     <footer id="footer">
-      <a href="https://www.facebook.com/vikas.suryavanshi.505"><i class="fab fa-facebook-f social-icon"></i></a>
+      <a href="https://www.facebook.com/vikas.suryavanshi.505" target="_blank"><i class="fab fa-facebook-f social-icon"></i></a>
       
      <a href="https://www.instagram.com/ausdershwetkang/?igshid=1p8xst002ht8z"> <i class="fab fa-instagram social-icon"></i></a>
       
