--- a/Male.html
+++ b/Male.html
@@ -109,9 +109,9 @@
          <!-- Footer Section  -->
 
     <footer id="footer">
-      <a href="https://www.facebook.com/vikas.suryavanshi.505"><i class="fab fa-facebook-f social-icon"></i></a>
+      <a href="https://www.facebook.com/vikas.suryavanshi.505" target="_blank"><i class="fab fa-facebook-f social-icon"></i></a>
       
-     <a href="https://www.instagram.com/ausdershwetkang/?igshid=1p8xst002ht8z"> <i class="fab fa-instagram social-icon"></i></a>
+     <a href="https://instagram.com/ausdershwetkangrottweilers?igshid=1vod63rbin26" target="_blank"> <i class="fab fa-instagram social-icon"></i></a>
      
       <br>
   
