--- a/ContactUS.html
+++ b/ContactUS.html
@@ -150,7 +150,7 @@
 
 </div> <br>
 <div class="col-lg-6 contact-info ">
- <a href="https://wa.me/919212999995" ><button type="button" class="btn btn-dark btn-lg "><i class="fa fa-whatsapp "  aria-hidden="true" style="color: green; size: 5x;"></i>Send Msg on What'sApp</button></a>
+ <a href="https://wa.me/919212999995" target="_blank"><button type="button" class="btn btn-dark btn-lg "><i class="fa fa-whatsapp "  aria-hidden="true" style="color: green; size: 5x;"></i>Send Msg on What'sApp</button></a>
   <h4>
     Mr. Vikas Suryavanshi <br>
     Delhi <br>
